# mChat

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  Package.resolved  Package.swift  README.md  REQUIREMENTS.md  SETUP.md
Archive/mChatCore/Crypto/: NIP44.swift
Archive/mChatCore/Models/: ChatMessage.swift  Contact.swift  Conversation.swift
Archive/mChatCore/Nostr/: NostrClient.swift  NostrError.swift  NostrKeyPair.swift
Sources/mCLIChat/: CLIApp.swift
Sources/mChat/App/: mChatApp.swift
Sources/mChat/Plugins/: SwiftDataStoragePlugin.swift
Sources/mChat/Services/: ChatService.swift  ContactsIntegrationService.swift  IdentityService.swift
Sources/mChat/Storage/: MessageStore.swift  StoredContact.swift  StoredConversation.swift  StoredMessage.swift
Sources/mChat/Views/: ChatView.swift  ContactsView.swift  (+3 more)
Sources/mChatCore/: Extensions.swift
Sources/mChatPlugins/: NostrPlugin.swift
Sources/mEchoD/: main.swift
Sources/mSwiftChatd/: main.swift
Tests/mChatCoreTests/: NIP44Tests.swift  NostrKeyPairTests.swift
docs/: SDP.md  TEST_PLAN_REMOTE.md  ai-assistant-xcode-lessons.md  homenode-requirements.md  nostr.md  p2p-technologies.md  protocol-candidates.md  todo-split-core-nostr.md
mCLIChat/: Cargo.toml
mCLIChat/src/: contacts.rs  main.rs
mCLIChat/tests/: README.md  integration_test.sh
mChat.xcodeproj/: project.pbxproj
mChat/Services/: IdentityService.swift
mChat/Storage/: StoredContact.swift  StoredConversation.swift
mChat/Views/: MainTabView.swift
mChatd/: Cargo.toml
mChatd/src/: main.rs
rust-cli-chat/: Cargo.toml
rust-cli-chat/src/: contacts.rs  main.rs
(+13 files in other folders)
