[package]
name = "mChatd"
version = "0.1.0"
edition = "2021"
description = "mChat Nostr daemon — agent backend for HomeNode integration"

[[bin]]
name = "mChatd"
path = "src/main.rs"

[dependencies]
nostr-sdk = { version = "0.36", features = ["nip04"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
